Fix bug 1233979: Make keyboard shortcuts more visible (#385)
Also remove the ".popup" concept, which is no longer used

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -230,8 +230,7 @@ body > header .locale.select {
   border-left-color: #272A2F;
 }
 
-.select .menu,
-.select .popup {
+.select .menu {
   bottom: auto;
   top: 60px;
 }
@@ -504,11 +503,6 @@ body > header .notification li {
   margin: 0 8px 0 -2px;
 }
 
-#profile.select .popup {
-  right: 5px;
-  width: 350px;
-}
-
 #info {
   display: none;
 }
@@ -521,24 +515,6 @@ body > header .notification li {
 
 #info .menu a {
   color: #7BC876;
-}
-
-#hotkeys table {
-  width: 100%;
-}
-
-#hotkeys td:first-child {
-  font-weight: 300;
-  height: 26px;
-  width: 60%;
-}
-
-#hotkeys span {
-  background: #3F4752;
-  border: 1px solid #5E6475;
-  border-radius: 2px;
-  font-weight: 300;
-  padding: 0 4px;
 }
 
 body > header .select aside.menu {
@@ -1179,7 +1155,62 @@ body > header aside p {
   display: none;
   float: left;
   line-height: 22px;
-  padding: 9px 0;
+  padding: 9px 10px 9px 0;
+}
+
+#hotkeys {
+  cursor: pointer;
+}
+
+#hotkeys .selector {
+  color: #AAAAAA;
+  font-size: 22px;
+  padding: 8px 10px;
+}
+
+#hotkeys .selector:hover {
+  color: #7BC876;
+}
+
+#hotkeys .menu {
+  width: 400px;
+  height: 400px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  position: fixed;
+  margin: auto;
+  padding: 10px 24px;
+}
+
+#hotkeys h2 {
+  font-size: 20px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+#hotkeys table {
+  width: 100%;
+}
+
+#hotkeys td:first-child {
+  font-weight: 300;
+  height: 35px;
+  width: 60%;
+}
+
+#hotkeys td:last-child {
+  white-space: nowrap;
+}
+
+#hotkeys span {
+  background: #3F4752;
+  border: 1px solid #5E6475;
+  border-radius: 2px;
+  font-weight: 300;
+  margin: 0 4px;
+  padding: 0 4px;
 }
 
 #editor #single > menu button {
